--- a/example/index.html
+++ b/example/index.html
@@ -2,14 +2,31 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <style>
+        * {
+            padding: 0;
+            margin: 0;
+        }
+        .position {
+            display: inline-block;
+            border: 1px solid #aaa;
+            width: 25px;
+            height: 25px;
+        }
+        .black {
+            background-color: #333;
+        }
+        .white {
+            background-color: #ccc;
+        }
+    </style>
 </head>
 <body>
-    <div id="example1"></div>
-    <div id="example2"></div>
+    <div id="example"></div>
     <script src="./simple_goban.js"></script>
     <script>
         var Goban = require('simple-goban');
-        var example1 = new Goban(19, document.getElementById('example1'));
+        (new Goban(19, document.getElementById('example')));
     </script>
 </body>
 </html>
