fixing the row height

--- a/example/index.html
+++ b/example/index.html
@@ -19,6 +19,9 @@
         .white {
             background-color: #ccc;
         }
+        .row {
+            height: 25px;
+        }
     </style>
 </head>
 <body>
