--- a/example/index.html
+++ b/example/index.html
@@ -9,18 +9,23 @@
         }
         .position {
             display: inline-block;
-            border: 1px solid #aaa;
-            width: 25px;
-            height: 25px;
+            width: 30px;
+            height: 30px;
+        }
+        .stone {
+            fill: #eee;
         }
         .black {
-            background-color: #333;
+            fill: #333;
         }
         .white {
-            background-color: #ccc;
+            fill: #ccc;
         }
         .row {
-            height: 25px;
+            height: 30px;
+        }
+        .position {
+            fill: #eee;
         }
     </style>
 </head>
