svgs with star points and all

--- a/example/index.html
+++ b/example/index.html
@@ -19,13 +19,19 @@
             fill: #333;
         }
         .white {
-            fill: #ccc;
+            fill: #fff;
+        }
+        .stone-border {
+            fill: #000;
         }
         .row {
             height: 30px;
         }
-        .position {
-            fill: #eee;
+        .hover:hover {
+            opacity: .3;
+        }
+        .hover {
+            opacity: 0;
         }
     </style>
 </head>
