--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <title>Simple Goban</title>
     <style>
         * {
             padding: 0;
             margin: 0;
+        }
+        #logo {
+            margin: 5px 0 0 10px;
         }
         .position {
             display: inline-block;
@@ -36,6 +40,11 @@
     </style>
 </head>
 <body>
+    <div id="logo">
+        <a href="https://github.com/duckpunch/react-simple-goban">
+            <img src="gh_logo.png" alt="github" />
+        </a>
+    </div>
     <div id="example"></div>
     <script src="./simple_goban.js"></script>
     <script>
