--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         #logo {
             margin: 5px 0 0 10px;
         }
+        #logo a{
+            text-decoration: none;
+        }
+        #logo span {
+            font-family: sans-serif;
+            margin-left: 10px;
+            font-size: 16pt;
+        }
         .position {
             display: inline-block;
             width: 30px;
@@ -44,6 +52,7 @@
         <a href="https://github.com/duckpunch/react-simple-goban">
             <img src="gh_logo.png" alt="github" />
         </a>
+        <span>Simple Goban</span>
     </div>
     <div id="example"></div>
     <script src="./simple_goban.js"></script>
